uploaded results with disabled turbo boost